# waifu4me

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  fetcher.rs  handlers.rs  lib.rs  main.rs  vars.rs
tests/: fetcher_test.rs  integration_test.rs
