[package]
name = "waifu4me"
authors = ["plastiey <btwdesu@gmail.com>"]
description = "A CLI tool that allows you to interact with the waifu.pics API from the comfort of your terminal."
repository = "https://github.com/plastiey/waifu4me"
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
console = "0.15.7"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde_json = "1.0.108"

[dev-dependencies]
assert_cmd = "2.0.12"
httpmock = "0.6.8"
predicates = "3.0.4"
